--- a/src/components/arrow-button/ArrowButton.module.scss
+++ b/src/components/arrow-button/ArrowButton.module.scss
@@ -10,7 +10,16 @@
 	height: 100px;
 	background-color: #000000;
 	border-right: 1px;
-	transition: transform 0.5s ease;
+	cursor: pointer;
+	transition: transform 0.5s ease, background-color 0.3s ease;
+}
+
+.container:hover {
+	background-color: #ffc802;
+}
+
+.container:active {
+	background-color: #787878;
 }
 
 .container_open {
