--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -6,14 +6,38 @@
 	width: 210px;
 	height: 50px;
 	text-align: center;
-	border: 1px solid #000000;
 	cursor: pointer;
+	border: 1px solid #000000;
+	transition: background-color 0.3s ease;
 }
 
-.button:active {
-	background: var(--gold, #ffc802);
+.button div {
+	color: inherit;
+	transition: color 0.3s ease;
 }
 
 .button:hover {
-	background: var(--gold, #ffc802);
+	background-color: var(--gold, #ffc802);
+}
+
+.button:active {
+	background-color: var(--gold, #ffc802);
+}
+
+button[type='reset']:hover {
+	color: #ffffff;
+	background-color: #000000;
+}
+
+button[type='reset'] {
+	background-color: #ffffff;
+}
+
+button[type='submit'] {
+	background-color: #ffc802;
+}
+
+button[type='submit']:hover {
+	color: #000000;
+	background-color: #ffedab;
 }
